--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
             <div class="social-icons">
-                <a href="mailto:mnader200444@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+                <a href="mailto:monaderrrr@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/mohamed-naderrr/" target="_blank"><i
                         class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/mohamednaderrr" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="info">
                     <h3>Email</h3>
-                    <p>mnader200444@gmail.com</p>
+                    <p>monaderrrr@gmail.com</p>
                 </div>
             </div>
         </div>
